--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "url": "http://github.com/indexzero/empirejs.org.git"
   },
   "domains": [
+    "empirejs.com",
+    "empirejs.org"
+    "www.empirejs.com",
+    "www.empirejs.org"
     "2014.empirejs.com",
     "2014.empirejs.org"
   ],
