[fix dist] Bad package.json.

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   },
   "domains": [
     "empirejs.com",
-    "empirejs.org"
+    "empirejs.org",
     "www.empirejs.com",
-    "www.empirejs.org"
+    "www.empirejs.org",
     "2014.empirejs.com",
     "2014.empirejs.org"
   ],
